[workspace]
members = [
    "crates/lynx-core",
    "crates/lynx-cli",
    "examples/*",
    "crates/lynx-cert",
    "crates/lynx-mock", "crates/lynx-db",
]
exclude = ["third-libs"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["suxin2017"]
description = "A proxy service"
edition = "2024"
license = "MIT"
documentation = "https://github.com/suxin2017/lynx-server"
homepage = "https://github.com/suxin2017/lynx-server"
repository = "https://github.com/suxin2017/lynx-server"

# Add this config to your root Cargo.toml (virtual manifest)
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "debug-print",
] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
rcgen = { version = "0.13.0", default-features = false, features = [
    "x509-parser",
    "pem",
    "ring",
] }
rustls-pemfile = "2.2.0"
include_dir = "0.7.4"

hyper-tungstenite = "0.17.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.9.0"
futures-util = "0.3.31"
tokio-util = { version = "0.7", features = ["io-util", "compat"] }
once_cell = "1.20.2"
tokio-stream = { version = "0.1.14", default-features = false, features = [
    "sync",
] }
http = "1.0"
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
pin-project-lite = "0.2.16"
tower = { version = "0.5.2", features = ["full"] }
tempdir = "0.3.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
