[package]
name = "lynx-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md", "assets"]

[[bin]]
name = "lynx-cli"
path = "src/main.rs"

[lib]
name = "lynx_cli"
path = "src/lib.rs"

[dependencies]
lynx-core = { version = "0.2.5-alpha.1", path = "../lynx-core" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
console = { version = "0.15.10", features = ["windows-console-colors"] }
directories = "6.0.0"
include_dir = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
reqwest = { version = "0.12.18", features = ["json"] }

[dev-dependencies]
tempfile = "3.12.0"
