[package]
name = "lynx-core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["src", "Cargo.toml", "README.md"]

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
sea-orm = { workspace = true, features = ["mock"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
hyper-tungstenite = "0.17.0"
http = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { version = "0.26.1", features = [
    "rustls",
    "rustls-tls-webpki-roots",
    "connect",
] }
futures-util = { workspace = true }
bytes = { workspace = true }
hyper-rustls = { version = "0.27.3", default-features = false, features = [
    "webpki-roots",
    "webpki-tokio",
    "ring",
    "http1",
    "http2",
    "tls12",
] }
reqwest = { version = "0.12.18", features = [
    "rustls-tls-manual-roots",
    "gzip",
    "json",
    "stream",
    "rustls-tls",
] }
webpki-roots = "0.26.0"
rustls-pemfile = "2.2.0"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.8.5"
rcgen = { version = "0.13.0", default-features = false, features = [
    "x509-parser",
    "pem",
    "ring",
] }
time = "0.3.37"
rsa = "0.9.7"
once_cell = { workspace = true }
tower = { workspace = true }
chrono = "0.4.39"
derive_builder = "0.20.2"
local-ip-address = "0.6.3"
serde_json = "1.0.135"
serde = "1.0.217"
nanoid = "0.4.0"
sea-orm-migration = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
url = "2.5.4"
include_dir = { workspace = true }
mime_guess = "=2.0.5"
glob-match = "0.2.1"
regex = "1.11.1"
base64 = "0.22.1"
lynx-cert = { path = "../lynx-cert" }
lynx-db = { path = "../lynx-db" }
pin-project-lite = { workspace = true }
axum = "0.8.4"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
dashmap = "6.1.0"


[dev-dependencies]
dotenv = "0.15.0"
async-compression = { version = "0.4.18", features = ["gzip", "tokio"] }
tempdir = "0.3.7"
tempfile = "3.12.0"
lynx-mock = { path = "../lynx-mock" }
async-once-cell = "0.5.4"
tower-test = { version = "0.4.0" }
tokio-test = "0.4.4"
reqwest = { version = "0.12.18", features = [
    "rustls-tls-manual-roots",
    "gzip",
    "json",
    "stream",
    "rustls-tls",
] }
reqwest-websocket = "0.5.0"
