[package]
name = "log-jaeger"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "simple_demo"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = [
    "http-proto",
    "reqwest-client",
] }
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }

# Lynx 内部依赖
lynx-core = { path = "../../crates/lynx-core" }
